- added woolly rhino
- added saber-tooth tiger
- fixed TOP values after restart
v1.0.1
- added mammoth tusk item
- added Mammoth entity
- moved tools to mod group
- integrated TheOneProbe
- drying rack improved add/remove item
- fixed Aquaduct connecting vertically
v1.0.0