@@ -24,6 +24,7 @@
     "item.stone_age.raw_bread": "Bread dough",
     "item.stone_age.mammoth_tusk": "Mammoth tusk",
     "item.stone_age.rhino_tusk": "Rhino tusk",
+    "item.stone_age.saber_teeth": "Saber teeth",
 
     "item.stone_age.deer_spawn_egg": "Deer spawn egg",
     "item.stone_age.boar_spawn_egg": "Boar spawn egg",
